{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 31,
  "lineage": "31c36d8f-3562-c02b-fc19-b4b53a5a37f6",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:loadbalancer/app/it-tools/d8a5185908acc0a1",
            "arn_suffix": "app/it-tools/d8a5185908acc0a1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "it-tools-481534464.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:305476115260:loadbalancer/app/it-tools/d8a5185908acc0a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "it-tools",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-079c226943ac03f57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09471070a2a2ed492"
              },
              {
                "subnet_id": "subnet-0e8a0f7d494926a5d"
              }
            ],
            "subnets": [
              "subnet-09471070a2a2ed492",
              "subnet-0e8a0f7d494926a5d"
            ],
            "tags": {
              "Name": "it-tools"
            },
            "tags_all": {
              "Name": "it-tools"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:loadbalancer/app/it-tools/d8a5185908acc0a1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:listener/app/it-tools/d8a5185908acc0a1/45b0520ac53a9853",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:targetgroup/it-tools-tg/4791a986def074e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:305476115260:listener/app/it-tools/d8a5185908acc0a1/45b0520ac53a9853",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:loadbalancer/app/it-tools/d8a5185908acc0a1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:listener/app/it-tools/d8a5185908acc0a1/45b0520ac53a9853"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:targetgroup/it-tools-tg/4791a986def074e6",
            "arn_suffix": "targetgroup/it-tools-tg/4791a986def074e6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:305476115260:targetgroup/it-tools-tg/4791a986def074e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:305476115260:loadbalancer/app/it-tools/d8a5185908acc0a1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "it-tools-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:305476115260:targetgroup/it-tools-tg/4791a986def074e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:security-group/sg-079c226943ac03f57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079c226943ac03f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "it-tools-alb-sg",
            "name_prefix": "",
            "owner_id": "305476115260",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "it-tools-alb-sg"
            },
            "tags_all": {
              "Name": "it-tools-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "sg-079c226943ac03f57",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:security-group/sg-0eb3e8f9b3e8f31c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb3e8f9b3e8f31c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079c226943ac03f57"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "it-tools-ecs-sg",
            "name_prefix": "",
            "owner_id": "305476115260",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "it-tools-ecs-sg"
            },
            "tags_all": {
              "Name": "it-tools-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "sg-0eb3e8f9b3e8f31c6",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038ded5379be14598",
            "arn": "arn:aws:ec2:us-east-2:305476115260:elastic-ip/eipalloc-038ded5379be14598",
            "association_id": "eipassoc-0243e5a65b4edf0b5",
            "domain": "vpc",
            "id": "eipalloc-038ded5379be14598",
            "network_border_group": "us-east-2",
            "network_interface": "eni-061cc1a05d883bda5",
            "private_dns": "ip-10-0-1-175.us-east-2.compute.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-18-226-120-209.us-east-2.compute.amazonaws.com",
            "public_ip": "18.226.120.209",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "eipalloc-038ded5379be14598",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:internet-gateway/igw-0919cb85cfb564f7d",
            "id": "igw-0919cb85cfb564f7d",
            "owner_id": "305476115260",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools-igw"
            },
            "tags_all": {
              "Name": "it-tools-igw"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "igw-0919cb85cfb564f7d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038ded5379be14598",
            "association_id": "eipassoc-0243e5a65b4edf0b5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-086bc22212ffe75a0",
            "network_interface_id": "eni-061cc1a05d883bda5",
            "private_ip": "10.0.1.175",
            "public_ip": "18.226.120.209",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09471070a2a2ed492",
            "tags": {
              "Name": "it-tools-nat"
            },
            "tags_all": {
              "Name": "it-tools-nat"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "nat-086bc22212ffe75a0",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:route-table/rtb-0a85179eee04f92d1",
            "id": "rtb-0a85179eee04f92d1",
            "owner_id": "305476115260",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086bc22212ffe75a0",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "it-tools-private-rt"
            },
            "tags_all": {
              "Name": "it-tools-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtb-0a85179eee04f92d1",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:route-table/rtb-05d5f82bb472d41a4",
            "id": "rtb-05d5f82bb472d41a4",
            "owner_id": "305476115260",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0919cb85cfb564f7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "it-tools-public-rt"
            },
            "tags_all": {
              "Name": "it-tools-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtb-05d5f82bb472d41a4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f53d999c68930d4",
            "region": "us-east-2",
            "route_table_id": "rtb-0a85179eee04f92d1",
            "subnet_id": "subnet-0a88069af4e9b0822"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtbassoc-03f53d999c68930d4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0631c3e0fefdcb4ea",
            "region": "us-east-2",
            "route_table_id": "rtb-0a85179eee04f92d1",
            "subnet_id": "subnet-07d364660c9454273"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtbassoc-0631c3e0fefdcb4ea",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b26967eec7a818e2",
            "region": "us-east-2",
            "route_table_id": "rtb-05d5f82bb472d41a4",
            "subnet_id": "subnet-09471070a2a2ed492"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtbassoc-0b26967eec7a818e2",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eddba2a0597dde2d",
            "region": "us-east-2",
            "route_table_id": "rtb-05d5f82bb472d41a4",
            "subnet_id": "subnet-0e8a0f7d494926a5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "rtbassoc-0eddba2a0597dde2d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:subnet/subnet-0a88069af4e9b0822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88069af4e9b0822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305476115260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools-private-subnet-1"
            },
            "tags_all": {
              "Name": "it-tools-private-subnet-1"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "subnet-0a88069af4e9b0822",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:subnet/subnet-07d364660c9454273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d364660c9454273",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305476115260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools-private-subnet-2"
            },
            "tags_all": {
              "Name": "it-tools-private-subnet-2"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "subnet-07d364660c9454273",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:subnet/subnet-09471070a2a2ed492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09471070a2a2ed492",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305476115260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools-public-subnet-1"
            },
            "tags_all": {
              "Name": "it-tools-public-subnet-1"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "subnet-09471070a2a2ed492",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:subnet/subnet-0e8a0f7d494926a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a0f7d494926a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305476115260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools-public-subnet-2"
            },
            "tags_all": {
              "Name": "it-tools-public-subnet-2"
            },
            "vpc_id": "vpc-07aa85aeafaef8b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "subnet-0e8a0f7d494926a5d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305476115260:vpc/vpc-07aa85aeafaef8b6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a581939bad2c4094",
            "default_route_table_id": "rtb-0b26b4050faea5a77",
            "default_security_group_id": "sg-0d58c10f8f9796aa5",
            "dhcp_options_id": "dopt-0a18529673f60e25d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07aa85aeafaef8b6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b26b4050faea5a77",
            "owner_id": "305476115260",
            "region": "us-east-2",
            "tags": {
              "Name": "it-tools"
            },
            "tags_all": {
              "Name": "it-tools"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "305476115260",
            "id": "vpc-07aa85aeafaef8b6f",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}